--- a/index.css
+++ b/index.css
@@ -23,16 +23,12 @@
     align-items: center;
     row-gap: 3rem;
     border: 1px solid #0056b3;
-    /* background: linear-gradient(90deg, #eb07c5, #0606f1); */
-    /* background-image: url(./image/bg.jpg);
-    background-position: center;
-    background-repeat: no-repeat; */
+    
 }
 
 #linktree {
     width: 100%;
     height: auto;
-    /* background-color: aqua; */
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -77,9 +73,6 @@ a:hover {
     font-size: 1rem;
     font-weight: 600;
 }
-
-/* Styles for the form */
-
 
 .form{
     width: 100%;
@@ -140,7 +133,7 @@ input{
 
 Button {
     width: 35%;
-    padding: 8px;
+    padding: 1rem;
     background-color: #007bff;
     color: #fff;
     border: none;
